k8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproject-ingress
  namespace: workshop  # Ensure it matches the namespace used for the backend and frontend services
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  ingressClassName: alb
  rules:
  - host: elephant-eks.tdtlworld.com  # Your domain name
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-backend-service
            port:
              number: 8000  # Port for the backend (Django)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend-service
            port:
              number: 80  # Port for the frontend (React)
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server-clusterip.argocd
            port:
              number: 443  # ArgoCD service port
